optimize the open-box experience of the app

--- a/app/static/css/pages/profile.css
+++ b/app/static/css/pages/profile.css
@@ -79,7 +79,7 @@
 
 .form-table td {
 	padding: 12px 10px;
-	vertical-align: top;
+	vertical-align: middle;
 	/* Desktop view will use inherited borders from components/forms.css */
 }
 
