fix several agenda problems

--- a/app/static/css/pages/agenda.css
+++ b/app/static/css/pages/agenda.css
@@ -633,7 +633,12 @@
     z-index: 99;
     top: 100%;
     left: 0;
-    right: 0;
+    min-width: 100%;
+    width: max-content;
+}
+
+.autocomplete-items div:hover {
+    background-color: #e9e9e9;
 }
 
 .autocomplete-items div {
@@ -641,10 +646,7 @@
     cursor: pointer;
     background-color: #fff;
     border-bottom: 1px solid #d4d4d4;
-}
-
-.autocomplete-items div:hover {
-    background-color: #e9e9e9;
+    white-space: nowrap;
 }
 
 .meeting-type-badge {
