--- a/app/templates/lucky_draw.html
+++ b/app/templates/lucky_draw.html
@@ -56,7 +56,8 @@
                 data-name="{{ entry.contact.Name if entry.contact else 'N/A' }}"
                 data-avatar="{% if entry.contact and entry.contact.Avatar_URL %}{{ url_for('static', filename=entry.contact.Avatar_URL) }}{% endif %}"
                 data-type="{% if entry.contact_type %}{{ entry.contact_type }}{% elif entry.contact and entry.contact.user and entry.contact.user.is_officer %}Officer{% elif entry.contact %}{{ entry.contact.Type }}{% else %}Guest{% endif %}"
-                data-ticket="{{ entry.ticket }}">
+                data-ticket="{{ entry.ticket }}"
+                data-has-topics-role="{{ 'true' if RoleID.TOPICS_SPEAKER in entry.roles|map(attribute='id') else 'false' }}">
             </div>
             {% endfor %}
         </div>
