--- a/app/static/css/pages/voting.css
+++ b/app/static/css/pages/voting.css
@@ -211,6 +211,11 @@
 		height: 14px;
 		flex-shrink: 0;
 	}
+
+	.accordion-header-right {
+		font-size: 0.9em;
+		color: #333;
+	}
 }
 
 /* --- Meeting Rating Section --- */
