--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -17,7 +17,7 @@
 
 <body>
   <div class="login-container">
-    <img src="{{ url_for('static', filename='images/SHLTMC-logo.png') }}" alt="SHLTMC Logo"
+    <img src="{{ url_for('static', filename='images/SHLTMC-logo.webp') }}" alt="SHLTMC Logo"
       style="width: 300px; margin-bottom: 20px" />
     <h1>Meeting Manager</h1>
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
